# Adsorption-Analysis-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  adsorption_app.py  docker-compose.yml  models.py  mypy.ini  pyproject.toml  report_generator.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  sidebar_ui.py  translations.py  utils.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adsorblab_pro/: __init__.py  __main__.py  app.py  app_main.py  config.py  docx_report.py  models.py  plot_style.py  sidebar_ui.py  streamlit_compat.py  utils.py  validation.py
adsorblab_pro/tabs/: __init__.py  calibration_tab.py  comparison_tab.py  competitive_tab.py  dosage_tab.py  home_tab.py  isotherm_tab.py  kinetic_tab.py  ph_effect_tab.py  report_tab.py  statistical_summary_tab.py  temperature_tab.py  thermodynamics_tab.py  threed_explorer_tab.py
case_studies/case1_isotherm/: README.md  data.csv  run_case1.py
case_studies/case1_isotherm/outputs/: derived_data.csv  model_summary.csv  results.json
case_studies/case2_kinetics/: README.md  data.csv  run_case2.py
case_studies/case2_kinetics/outputs/: derived_data.csv  model_summary.csv  results.json
case_studies/case3_thermodynamics/: README.md  data.csv  run_case3.py
case_studies/case3_thermodynamics/outputs/: derived_data.csv  langmuir_per_temperature.csv  results.json  thermodynamic_parameters.csv
docs/: USER_GUIDE.md
examples/: README.md  calibration_data.csv  dosage_data.csv  dosage_direct.csv  expected_results.json  isotherm_data.csv  isotherm_direct.csv  kinetic_data.csv  kinetic_direct.csv  ph_effect_data.csv  ph_effect_direct.csv  temperature_data.csv  temperature_direct.csv
scripts/: clean_artifacts.ps1  clean_artifacts.sh
tabs/: calibration_tab.py  dosage_tab.py  isotherm_tab.py  kinetic_tab.py  ph_effect_tab.py  temperature_tab.py  thermodynamics_tab.py
tests/: __init__.py  test_config_extended.py  test_coverage.py  test_docx_report.py  test_docx_report_extended.py  test_docx_report_logic.py  test_integration.py  test_models.py  test_models_extended.py  test_performance.py  test_plot_style_extended.py  test_report_generators.py  test_reviewer_workflows.py  test_tab_calculations.py  test_tab_helpers.py  test_thermo_error_propagation.py  test_ui_streamlit.py  test_utils.py  test_utils_extended.py  test_validation.py  test_validation_extended.py
